[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/ui/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ThaleahFat.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/GameController.gd" type="Script" id=3]
[ext_resource path="res://sfx/Retro Water Drop 01.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/Retro FootStep Metal 01.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/Retro Event Wrong Echo 03.wav" type="AudioStream" id=6]
[ext_resource path="res://music/Goat-Victory.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/Camera2D.gd" type="Script" id=8]
[ext_resource path="res://scenes/mechanics/PlayerData.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/GameOver.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/PauseMenu.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 4 )
Label/fonts/font = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="GameController" type="Node"]
pause_mode = 2
script = ExtResource( 3 )
worldSelectMusic = "GoatMap.wav"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.509804, 0.509804, 1 )

[node name="HUD" parent="Camera2D/CanvasLayer" instance=ExtResource( 1 )]

[node name="LevelStart" type="Control" parent="Camera2D/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Backing" type="ColorRect" parent="Camera2D/CanvasLayer/LevelStart"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -15.0
margin_bottom = 15.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Underline" type="ColorRect" parent="Camera2D/CanvasLayer/LevelStart"]
anchor_left = 0.1
anchor_top = 0.55
anchor_right = 0.9
anchor_bottom = 0.55
margin_top = 1.0
margin_bottom = 2.0
color = Color( 0.0901961, 0.368627, 0.996078, 1 )

[node name="LevelName" type="Label" parent="Camera2D/CanvasLayer/LevelStart"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 3 )
text = "Level 1"
align = 1
valign = 1

[node name="PickUpSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="DoorUnlockSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PlayerDiedSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="EnteredPortalSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="PlayerData" parent="." instance=ExtResource( 9 )]

[node name="GameOver" parent="." instance=ExtResource( 10 )]

[node name="PauseMenu" parent="." instance=ExtResource( 11 )]
